@@ -5,6 +5,7 @@
   * Stop some inconsequential messages from being printed when -qq was specified.
   * Fix some errors that were being printed on stdout rather than stderr.
   * Add --timeout arg. (overrides .ngetrc timeout option)
+  * Fix segfault if uulib gets confused and UUGetFileListItem returns an item with a NULL filename. (reported by joakim verona)
 
 2002-10-28 v0.22.1:
   * Fix segv on saving text file if no uulib info was recorded.
